WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86619
[EFL] appcache tests are flaky
https://bugs.webkit.org/show_bug.cgi?id=86619
Summary
[EFL] appcache tests are flaky
Chris Dumez
Reported
2012-05-16 06:41:17 PDT
appcache tests were recently unskipped in
Bug 85585
but a lot of them appear to be flaky on the EFL debug build bot.
Attachments
Patch
(1.27 KB, patch)
2012-05-16 07:00 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(3.87 KB, patch)
2012-05-17 14:01 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(3.94 KB, patch)
2012-05-17 14:14 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-05-16 07:00:43 PDT
Created
attachment 142249
[details]
Patch
Raphael Kubo da Costa (:rakuco)
Comment 2
2012-05-16 07:29:13 PDT
Comment on
attachment 142249
[details]
Patch Looks good.
Gyuyoung Kim
Comment 3
2012-05-16 17:34:47 PDT
Comment on
attachment 142249
[details]
Patch Looks make sense.
WebKit Review Bot
Comment 4
2012-05-16 19:58:18 PDT
Comment on
attachment 142249
[details]
Patch Clearing flags on attachment: 142249 Committed
r117382
: <
http://trac.webkit.org/changeset/117382
>
WebKit Review Bot
Comment 5
2012-05-16 19:58:23 PDT
All reviewed patches have been landed. Closing bug.
Sudarsana Nagineni (babu)
Comment 6
2012-05-17 03:47:32 PDT
DRT crashes on the test startup with this patch. The EFL Debug Buildbot is red exiting early after 20 crashes and 0 timeouts. 7188 tests run.
http://build.webkit.org/builders/EFL%20Linux%20Debug/builds/1874/steps/layout-test/logs/stdio
Here is the backtrace of the crash: Program terminated with signal 11, Segmentation fault. #0 0x00007f1784e586e9 in WebCore::ApplicationCacheStorage::setCacheDirectory (this=0x227ef50, cacheDirectory="/tmp/DumpRenderTree-DwQlJv/Applications") at /WebKit/Source/WebCore/loader/appcache/ApplicationCacheStorage.cpp:366 366 ASSERT(m_cacheDirectory.isNull()); (gdb) bt #0 0x00007f1784e586e9 in WebCore::ApplicationCacheStorage::setCacheDirectory (this=0x227ef50, cacheDirectory="/tmp/DumpRenderTree-DwQlJv/Applications") at /WebKit/Source/WebCore/loader/appcache/ApplicationCacheStorage.cpp:366 #1 0x00007f1781d818c6 in ewk_settings_application_cache_path_set (path=0x7fff8797f9c0 "/tmp/DumpRenderTree-DwQlJv/Applications") at /WebKit/Source/WebKit/efl/ewk/ewk_settings.cpp:306 #2 0x0000000000464068 in DumpRenderTreeChrome::initialize (this=0x2291cb0) at /WebKit/Tools/DumpRenderTree/efl/DumpRenderTreeChrome.cpp:163 #3 0x00000000004638a3 in DumpRenderTreeChrome::create (evas=0x228b230) at /WebKit/Tools/DumpRenderTree/efl/DumpRenderTreeChrome.cpp:58 #4 0x0000000000461cb9 in main (argc=2, argv=0x7fff87980388) at /WebKit/Tools/DumpRenderTree/efl/DumpRenderTree.cpp:402 (gdb)
Chris Dumez
Comment 7
2012-05-17 03:58:53 PDT
Ok, I'll make a debug build to reproduce. Feel free to roll out the patch in the mean time.
Raphael Kubo da Costa (:rakuco)
Comment 8
2012-05-17 08:12:45 PDT
Reopening. Gyuyoung rolled out
r117382
manually in <
http://trac.webkit.org/changeset/117425
> and did not reopen this bug.
Chris Dumez
Comment 9
2012-05-17 14:01:34 PDT
Created
attachment 142546
[details]
Patch No longer set the app cache path in ewk_main since the path can only be set once and this prevents DRT to override it. Update the ewk_settings documentation to clarify this and indicate the default value change.
Raphael Kubo da Costa (:rakuco)
Comment 10
2012-05-17 14:08:23 PDT
Comment on
attachment 142546
[details]
Patch Looks good to me, thank you.
Thiago Marcos P. Santos
Comment 11
2012-05-17 14:12:17 PDT
Comment on
attachment 142546
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=142546&action=review
> Source/WebKit/efl/ewk/ewk_main.cpp:-170 > - ewk_settings_application_cache_path_set(webkitDirectory.utf8().data());
You should remove the brackets here.
Chris Dumez
Comment 12
2012-05-17 14:14:57 PDT
Created
attachment 142552
[details]
Patch Fix minor style issue. Thanks Thiago.
Thiago Marcos P. Santos
Comment 13
2012-05-17 14:20:41 PDT
LGTM. Thanks. BTW, I think we should apply the idea of this patch to other "default paths". IMO it is intrusive to set something by default to ~/.webkit/.
WebKit Review Bot
Comment 14
2012-05-18 00:06:13 PDT
Comment on
attachment 142552
[details]
Patch Clearing flags on attachment: 142552 Committed
r117552
: <
http://trac.webkit.org/changeset/117552
>
WebKit Review Bot
Comment 15
2012-05-18 00:06:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug