[EFL] appcache tests are flaky https://bugs.webkit.org/show_bug.cgi?id=86619

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-05-16
Reviewed by Gustavo Noronha Silva.

Correctly set the application cache database path in EFL's
DumpRenderTree initialization code.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::initialize):

Canonical link: https://commits.webkit.org/104292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117382 268f45cc-cd09-0410-ab3c-d52691b4dbfc